welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:5: error: not found: value levebrosse
  levebrosse()
  ^PictureMono1:9: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:10: error: not found: value levebrosse
  levebrosse()
  ^PictureMono1:14: error: not found: value baissebrosse
  baissebrosse()
  ^PictureMono1:15: error: not found: value levebrosse
  levebrosse()
  ^